syntax = "proto3";

option java_multiple_files = true;
package be.cloud;


message WeatherRequest {
    string date = 1;
    string location = 2;
}

message avgWeatherRequest {
    string period = 1;
    string location = 2;
}

message WeatherResponse {
    bool success = 1;
    string weather = 2;
    string error_message = 3;
}

message avgWeatherResponse {
    bool succes = 1;
    string weather = 2;
    string error_message = 3;
}


service WeatherService {
    rpc getWeather (WeatherRequest) returns (WeatherResponse);
    rpc getAvgWeather (avgWeatherRequest) returns (avgWeatherResponse);
}